@@ -3,6 +3,7 @@ Version 0.10.0
 Released: 2026-XX-XX
 
 Features:
+  * Add status icon mode setting in Preferences (no icon, normal, blinking).
   * [#711] Add macOS menu bar status item (NSStatusItem) with system tray icon.
 
 Version 0.9.4
